--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -19,8 +19,7 @@ default: &default
 
 development:
   <<: *default
-  database: evr_stats_konsole_development
-
+  database: news_app
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
